Update error_prone config